assets/css/main.css
/* Define variables here to avoid repetition and have consistency. */
:root {
  --white: #fff;  
  --dark-black: #222831;
  --light-black: #393e46; 
  --light-blue: #0092ca;
  --light-gray: #eeeeee;
}

/* Global (reset) CSS properties. */
* {
  box-sizing: border-box;
  font-family: 'Trebuchet MS', 'Georgia', sans-serif;
  margin: 0;
  padding: 0;
}

/* Element specific HTML selectors */
body {
  background-color: var(--light-gray);
}

ul {
  display: flex;
  /* flex: 1 1 100%; */
  list-style-type: none;
  justify-content: space-around;
  /* position: relative; */
  font-size: 20px;
  /* top: 80px; */
  gap: 19px;
}

ul a {
  border-bottom: 3px solid var(--light-blue);
  color: var(--light-blue);
  text-decoration: none;
} 

ul a:hover {
  text-decoration: none;
  border-bottom: none;
  background-color: var(--light-blue);
  color: var(--light-gray);
  font-size: 23px;
  /* border: 3px solid #fff; */
}

ul a:active {
  font-size: 19px;
}

/* Class selectors go here */
.text-link a {
  color: var(--light-blue);
  font-size: 17;
}

.nav {
  display: flex;
  position: relative;
  background-color: var(--dark-black);
  border-bottom: 4px solid var(--light-gray);
  /* gap: 20px; */
  padding: 76px;
  /* justify-content: space-between; */
}

.nav span {
  /* margin: -80px; */
  display: inline-flex;
  font-family: 'Arial Black';
  position: relative;
  left: 50%;
  top: 75px;
  left: -55px;
  /* background-color: var(--light-blue); */
  /* padding: 20px 45px 20px 50px; */
  border-radius: 3px;
  /* z-index: 1; */
}

.nav ul {
  display: flex;
  flex: 1 1;
  list-style-type: none;
  justify-content: flex-end;
  position: relative;
  font-size: 20px;
  left: 50px;
  top: 80px;
  gap: 23px;
}

 .nav h1 {
  /* justify-content: flex-center; */
  font-size: 25px;
  color: var(--white);
}

/* Selector for the avatar picture, top-left. */
#aboutme img {
  display: flex;
  flex-wrap: wrap;
  position: absolute;
  bottom: 30px;
  left: 35px;
  border-radius: 50%;
  width:150px;
  height:150px;
}

.header {
  display: flex;
  position: relative;
  /* background-color: #f1f1f1; */
  /* padding: 90px; */
  /* text-align: center; */
}

.header figure, img {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  width: 100%;

}

.header span {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  font-size: 29px;
  color: var(--white);
  left: 73%;
  top: -9%;
  /* flex-direction: column; */
  transform: skewX(-5deg);
  background-color: var(--light-blue);
  padding: 10px 20px 10px 20px;
  border-radius: 3px;
  /* z-index: 1; */
}

/* Container for <section> flexboxes */
.section {
  display: flex;
}

.section-left {
  flex: 1 1 0;
  margin: 30px;
  font-size: 35px;
  color: var(--light-blue);
  display: flex;
  justify-content: flex-end;
  border-right: 3px solid var(--light-blue);
  padding: 10px;
  width: 25%;
}

/* Creates two columns next to each other */
.section-right {
  /* flex: 0 0; */
  display: flex;
  flex-wrap: wrap;
  /* flex-direction: column; */
  /* flex: 0 0 300px; */
  width: 75%;
  margin: 30px;
}

.section-right p {
  display: inline-block;
  flex-wrap: wrap;
  width: 900px;
  margin: 20px;  
}

/* Main container for the three boxes. */
.box-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* align-content: space-between; */
  gap: 15px 5px;
  flex-wrap: wrap;
  /* margin: 4em 1em; */
}

.box-container section {
  position: relative;
  width: 320px;
  height: 300px;
  border: 4px solid var(--light-blue);
}
.box-container span {
  /* position: absolute;  */
  display: flex;
  position: absolute;
  padding: 10px 10px 10px 10px;
  background-color: var(--light-blue);
  color: var(--white);
  bottom: 15%;
  /* right: 5px; */
  font-size: 20px;
}

.box-container span h1 {
  color: white;
}

/* Manipulation on individual container boxes */
.box-container section:nth-child(1) {
  flex: 1 0 100%;
  background-color: var(--light-gray);
}

.box-container section:nth-child(2) {
  position: relative;
  flex: 0 1 49%;
}

.box-container section:nth-child(3) {
  flex: 0 1 49%;
}

.box-container section:nth-child(1) img {
  display: flex;
  margin-left: 40%;
  flex: 1 1 100%;
  position: absolute;
  /* flex-wrap: wrap; */
  /* position: relative; */
  width: 29%;
}

.box-container section:nth-child(2) img {
  display: flex;
  margin-left: 50%;
  margin-top: 7%;
  position: absolute;
  width: 40%;
}

.box-container section:nth-child(3) img {
  display: flex;
  margin-top: 7%;
}

.box-container section:hover {
  transform: translateX(0);
  box-shadow:
    inset 10px 0 300px var(--light-black),
    1px 0 40px var(--light-blue);
    width: 310px;
    height: 305px;
}

/* Media queries optimised for mobile defined here */
@media (max-width: 768px) {
  .section {
    flex-direction: column;
  }

/* Don't show irrelevant content. Make it look more mobile friendly. */
  .header, .section-left {
    display: none;
  }
 
  .nav {
    display: flex;
    position: relative;
    /* justify-content: space-evenly; */
  }
}

